// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addUserOrderToDB 1`] = `
Object {
  "account": "0xAccount",
  "amount": 456,
  "balance": 123,
  "createdAt": 1111111111,
  "currentSequence": 2,
  "expiry": 1234567890,
  "fee": 1,
  "feeAsset": "feeAsset",
  "fill": 234,
  "initialSequence": 1,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.123456789,
  "processed": true,
  "side": "bid",
  "status": "status",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`addUserOrderToDB error 1`] = `
Object {
  "account": "0xAccount",
  "amount": 456,
  "balance": 123,
  "createdAt": 1111111111,
  "currentSequence": 2,
  "expiry": 1234567890,
  "fee": 1,
  "feeAsset": "feeAsset",
  "fill": 234,
  "initialSequence": 1,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.123456789,
  "processed": false,
  "side": "bid",
  "status": "status",
  "type": "type",
  "updatedBy": "updatedBy",
}
`;

exports[`constructNewLiveOrder 1`] = `
Object {
  "account": "makerAddress",
  "amount": 1.0000000000000004,
  "balance": 1.0000000000000004,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "takerCode",
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "takerCode|makerCode",
  "price": 0.26973684,
  "side": "bid",
}
`;

exports[`constructNewLiveOrder 2`] = `
Object {
  "account": "makerAddress",
  "amount": -0.9999999999999999,
  "balance": -0.9999999999999999,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "makerCode",
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "makerCode|takerCode",
  "price": 3.70731707,
  "side": "ask",
}
`;

exports[`getAllLiveOrdersInPersistence add and update in redis 1`] = `
Object {
  "0xOrderHash": "update",
}
`;

exports[`getAllLiveOrdersInPersistence only add in redis 1`] = `
Object {
  "0xOrderHash": "add",
}
`;

exports[`getAllLiveOrdersInPersistence update in redis and exist in db 1`] = `
Object {
  "0xOrderHash": "update",
}
`;

exports[`getLiveOrderInPersistence in add queue 1`] = `"liveOrder"`;

exports[`getLiveOrderInPersistence in update queue 1`] = `"liveOrder"`;

exports[`getLiveOrderInPersistence only in db 1`] = `
Object {
  "liveOrder": "test",
}
`;

exports[`getRawOrderInPersistence in dynamo 1`] = `
Array [
  Array [
    "orders|cache",
    "add|orderHash",
  ],
]
`;

exports[`getRawOrderInPersistence in dynamo 2`] = `"{\\"orderHash\\":\\"orderHash\\",\\"signedOrder\\":{\\"senderAddress\\":\\"senderAddress\\",\\"makerAddress\\":\\"makerAddress\\",\\"takerAddress\\":\\"takerAddress\\",\\"makerFee\\":\\"0\\",\\"takerFee\\":\\"0\\",\\"makerAssetAmount\\":\\"123\\",\\"takerAssetAmount\\":\\"456\\",\\"makerAssetData\\":\\"makerAssetData\\",\\"takerAssetData\\":\\"takerAssetData\\",\\"salt\\":\\"789\\",\\"exchangeAddress\\":\\"exchangeAddress\\",\\"feeRecipientAddress\\":\\"feeRecipientAddress\\",\\"expirationTimeSeconds\\":\\"1234567890\\",\\"signature\\":\\"signature\\"}}"`;

exports[`getRawOrderInPersistence in dynamo 3`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`getRawOrderInPersistence in redis 1`] = `
Array [
  Array [
    "orders|cache",
    "add|orderHash",
  ],
]
`;

exports[`getRawOrderInPersistence in redis 2`] = `
Object {
  "orderHash": "orderHash",
  "signedOrder": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`getRawOrderInPersistence not in neither 1`] = `
Array [
  Array [
    "orders|cache",
    "add|orderHash",
  ],
]
`;

exports[`getRawOrderInPersistence not in neither 2`] = `undefined`;

exports[`getRawOrderInPersistence not in neither 3`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;

exports[`persistOrder add 1`] = `
Array [
  Array [
    "orders|cache",
    "add|0xOrderHash",
    "{\\"method\\":\\"add\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"test\\":\\"liveOrder\\",\\"initialSequence\\":123,\\"currentSequence\\":123},\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder add 2`] = `
Array [
  Array [
    "orders|queue",
    "add|0xOrderHash",
  ],
]
`;

exports[`persistOrder add 3`] = `
Array [
  Array [
    "orders|pubsub|pair",
    "{\\"method\\":\\"add\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"test\\":\\"liveOrder\\",\\"initialSequence\\":123,\\"currentSequence\\":123},\\"signedOrder\\":\\"may or may not exist\\"}",
  ],
]
`;

exports[`persistOrder add 4`] = `
Array [
  Array [
    Object {
      "currentSequence": 123,
      "initialSequence": 123,
      "test": "liveOrder",
    },
    "add",
    "status",
    "requestor",
    false,
  ],
]
`;

exports[`persistOrder not add 1`] = `
Array [
  Array [
    "orders|cache",
    "method|0xOrderHash",
    "{\\"method\\":\\"method\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":1,\\"balance\\":80}}",
  ],
]
`;

exports[`persistOrder not add 2`] = `
Array [
  Array [
    "orders|queue",
    "method|0xOrderHash",
  ],
]
`;

exports[`persistOrder not add 3`] = `
Array [
  Array [
    "orders|pubsub|pair",
    "{\\"method\\":\\"method\\",\\"status\\":\\"status\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":1,\\"balance\\":80}}",
  ],
]
`;

exports[`persistOrder not add 4`] = `
Array [
  Array [
    Object {
      "amount": 100,
      "balance": 80,
      "currentSequence": 123,
      "fill": 1,
    },
    "method",
    "status",
    "requestor",
    false,
  ],
]
`;

exports[`persistOrder terminate fill 1`] = `
Array [
  Array [
    "orders|cache",
    "terminate|0xOrderHash",
    "{\\"method\\":\\"terminate\\",\\"status\\":\\"fill\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":100,\\"balance\\":0}}",
  ],
]
`;

exports[`persistOrder terminate fill 2`] = `
Array [
  Array [
    "orders|queue",
    "terminate|0xOrderHash",
  ],
]
`;

exports[`persistOrder terminate fill 3`] = `
Array [
  Array [
    "orders|pubsub|pair",
    "{\\"method\\":\\"terminate\\",\\"status\\":\\"fill\\",\\"requestor\\":\\"requestor\\",\\"liveOrder\\":{\\"amount\\":100,\\"currentSequence\\":123,\\"fill\\":100,\\"balance\\":0}}",
  ],
]
`;

exports[`persistOrder terminate fill 4`] = `
Array [
  Array [
    Object {
      "amount": 100,
      "balance": 0,
      "currentSequence": 123,
      "fill": 100,
    },
    "terminate",
    "fill",
    "requestor",
    false,
  ],
]
`;

exports[`processOrderQueue add 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`processOrderQueue add 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue add 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "add",
    "status",
    "requestor",
    true,
  ],
]
`;

exports[`processOrderQueue add 4`] = `
Array [
  Array [
    "orders|cache",
    "add|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue empty queue 1`] = `
Array [
  Array [
    "orders|queue",
  ],
]
`;

exports[`processOrderQueue in queue but no key value 1`] = `
Array [
  Array [
    "orders|cache",
    "method|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`processOrderQueue terminate 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue terminate 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "terminate",
    "status",
    "requestor",
    true,
  ],
]
`;

exports[`processOrderQueue terminate 4`] = `
Array [
  Array [
    "orders|cache",
    "terminate|0xOrderHash",
  ],
]
`;

exports[`processOrderQueue update 1`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`processOrderQueue update 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "balance": 123,
      "createdAt": 1111111111,
      "currentSequence": 2,
      "expiry": 1234567890,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 234,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
    "update",
    "status",
    "requestor",
    true,
  ],
]
`;

exports[`processOrderQueue update 3`] = `
Array [
  Array [
    "orders|cache",
    "update|0xOrderHash",
  ],
]
`;

exports[`subscribeOrderUpdate 1`] = `
Array [
  Array [
    "orders|pubsub|pair",
  ],
]
`;

exports[`subscribeOrderUpdate 2`] = `
Array [
  Array [
    "orders|pubsub|pair",
  ],
]
`;
